--- a/lang/src/main/res/values/strings-data.xml
+++ b/lang/src/main/res/values/strings-data.xml
@@ -6,6 +6,10 @@
     <string name="data_account_register_invalid_parameter_password">密码不能小于6位!</string>
     <string name="data_account_register_invalid_parameter_name">称呼不能小于2位!</string>
     <string name="data_account_update_invalid_parameter">头像和描述不能为空!</string>
+    <string name="data_nick_update_invalid_parameter">更新昵称失败</string>
+    <string name="data_profile_update_invalid_parameter">更新资料失败</string>
+    <string name="data_profile_invalid_parameter">资料必须完整</string>
+    <string name="data_motto_update_invalid_parameter">更新座右铭失败</string>
     <string name="data_network_error">网络错误！</string>
     <string name="data_fetch_diary_list_error">获取日记列表失败</string>
     <string name="data_fetch_bank_list_error">获取银行卡列表失败</string>
